--- a/Tamagotchi/Views/Pets/Index.cshtml
+++ b/Tamagotchi/Views/Pets/Index.cshtml
@@ -13,6 +13,8 @@
   @foreach (Pet pet in Model)
   {
     <li><a href='/pet/@pet.Id'>@pet.Name</a></li>
+    <li><a href='/pet/@pet.Id'>@pet.Name</a></li>
+    <li><a href='/pet/@pet.Id'>@pet.Name</a></li>
   }
 </ul>
 
