Co-authored-by: Andriy Veremyeyev <belyybrat@gmail.com> Co-authored-by: Andrew Philpott <andrewphilpott92@gmail.com>

--- a/Tamagotchi/Views/Pets/Index.cshtml
+++ b/Tamagotchi/Views/Pets/Index.cshtml
@@ -13,8 +13,19 @@
   @foreach (Pet pet in Model)
   {
     <li><a href='/pet/@pet.Id'>@pet.Name</a></li>
+    <li><form action="pets/@ped.Id">
+      <button></button>
+    </form></li>
+    <li><form action="pets/@ped.Id">
+      <button></button>
+    </form></li>
+    <li><form action="pets/@ped.Id">
+      <button></button>
+    </form></li>
     <li><a href='/pet/@pet.Id'>@pet.Name</a></li>
-    <li><a href='/pet/@pet.Id'>@pet.Name</a></li>
+    <li><a href='/pet/@pet.Id'>@pet.Food</a></li>
+    <li><a href='/pet/@pet.Id'>@pet.Sleep</a></li>
+    <li><a href='/pet/@pet.Id'>@pet.Attention</a></li>
   }
 </ul>
 
