Co-authored-by: Andriy Veremyeyev <belyybrat@gmail.com> Co-authored-by: Andrew Philpott <andrewphilpott92@gmail.com> Co-authored-by: Krista Rutz <rutzkri000@gmail.com>

--- a/Tamagotchi/Views/Pets/Index.cshtml
+++ b/Tamagotchi/Views/Pets/Index.cshtml
@@ -14,7 +14,7 @@
   {
     <li><a href='/pet/@pet.Id'>@pet.Name</a></li>
     <li><form action="pets/@ped.Id">
-      <button></button>
+      <button type="submit" name=""></button>
     </form></li>
     <li><form action="pets/@ped.Id">
       <button></button>
