Update links to reflect RESTful conventions
Co-authored-by: Andriy Veremyeyev <belyybrat@gmail.com>
Co-authored-by: Andrew Philpott <andrewphilpott92@gmail.com>
Co-authored-by: Krista Rutz <rutzkri000@gmail.com>

--- a/Tamagotchi/Views/Home/Index.cshtml
+++ b/Tamagotchi/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-<h1>Tamagotchi World</h1>
-<img src="https://lh3.googleusercontent.com/proxy/dp9lD_bvI1JWViKnZc_dUecIxWbMGx2VK80zNFcWmwhRXLBGJI51Epl3nWk-u85lwB6sHWOD-mKU-yJD6gOpSUjufQ" class="img-fluid" alt="">
 
-<a href="/tamagotchi/create">Make a new Tamagotchi!</a>
+<div class="jumbotron">
+  <h1>Welcome to Tamagotchi World!</h1>
+</div>
+<img src="https://lh3.googleusercontent.com/proxy/X8s26mr9c3jL4R_qCg6aL2A0uzMi1Tf2EvMkIH_tPK6zD8LHArY94wU1QGczck6L87qX3jKhqJ3CA85fl9lIgwUptA" class="img-fluid" alt="">
+
+<a href="/pets/new">Make a new Tamagotchi!</a>
