--- a/Tamagotchi/Views/Pets/New.cshtml
+++ b/Tamagotchi/Views/Pets/New.cshtml
@@ -8,7 +8,7 @@
   <h1>Create a Tamagotchi</h1>
 </div>
 
-<form action="/tamagotchis" method="post">
+<form action="/pets" method="post">
   <div class="form-group">
     <h3>Name</h3>
     <input id="name" name="name" type="text">
