--- a/Tamagotchi/Views/Home/Index.cshtml
+++ b/Tamagotchi/Views/Home/Index.cshtml
@@ -3,5 +3,5 @@
   <h1>Welcome to Tamagotchi World!</h1>
 </div>
 <img src="https://lh3.googleusercontent.com/proxy/X8s26mr9c3jL4R_qCg6aL2A0uzMi1Tf2EvMkIH_tPK6zD8LHArY94wU1QGczck6L87qX3jKhqJ3CA85fl9lIgwUptA" class="img-fluid" alt="">
-
-<a href="/pets/new">Make a new Tamagotchi!</a>
+<br>
+<h2><a href="/pets/new">Make a new Tamagotchi!</a></h2>
