--- a/Tamagotchi/Views/Home/Index.cshtml
+++ b/Tamagotchi/Views/Home/Index.cshtml
@@ -1,7 +1,10 @@
+@{
+  Layout = "_Layout";
+}
 
 <div class="jumbotron">
   <h1>Welcome to Tamagotchi World!</h1>
 </div>
-<img src="https://lh3.googleusercontent.com/proxy/X8s26mr9c3jL4R_qCg6aL2A0uzMi1Tf2EvMkIH_tPK6zD8LHArY94wU1QGczck6L87qX3jKhqJ3CA85fl9lIgwUptA" class="img-fluid" alt="">
+<img src="https://lh3.googleusercontent.com/proxy/1piJP3GDYraWvNZCl0DcXkcgrV_i6No9Y-N0NDHW3K1ZmEW93pfF0fBAai6dHSwGmr-i9KQicUw5Vea_IY-FIDnpFQ" alt="">
 <br>
 <h2><a href="/pets/new">Make a new Tamagotchi!</a></h2>
