add function to delete an individual pet
Co-authored-by: Andriy Veremyeyev <belyybrat@gmail.com>
Co-authored-by: Andrew Philpott <andrewphilpott92@gmail.com>
Co-authored-by: Krista Rutz <rutzkri000@gmail.com>

--- a/Tamagotchi/Views/Home/Index.cshtml
+++ b/Tamagotchi/Views/Home/Index.cshtml
@@ -5,6 +5,6 @@
 <div class="jumbotron">
   <h1>Welcome to Tamagotchi World!</h1>
 </div>
-<img src="https://lh3.googleusercontent.com/proxy/1piJP3GDYraWvNZCl0DcXkcgrV_i6No9Y-N0NDHW3K1ZmEW93pfF0fBAai6dHSwGmr-i9KQicUw5Vea_IY-FIDnpFQ" alt="">
+<img src="https://9to5toys.com/wp-content/uploads/sites/5/2019/05/tamagotchi-on-bandai-1.jpg?quality=82&strip=all&w=1600" class="img-fluid" alt="">
 <br>
 <h2><a href="/pets/new">Make a new Tamagotchi!</a></h2>
