--- a/Tamagotchi/Views/Pets/Index.cshtml
+++ b/Tamagotchi/Views/Pets/Index.cshtml
@@ -5,8 +5,21 @@
   Layout = "_Layout";
 }
 
-
+<div class="container">
 <h1>Tamagotchi World</h1>
+
+@* buttons/links with actions *@
+<div class="form-group">
+<form action="/pets/updateall" method="post">
+  <button class="btn btn-large btn-warning" type="submit" name="button">Increase Time</button>
+</form>
+
+<a class="btn btn-large btn-success" href="/pets/new">Make a new Tamagotchi!</a>
+
+<form action="/pets/delete/all" method="post">
+  <button class="btn btn-large btn-danger" type="submit" name="button">Remove all Pets</button>
+</form>
+</div>
 
 @* list of all tamagotchis and stats *@
 <h3>Tamagotchis</h3>
@@ -19,69 +32,55 @@
 @foreach (Pet pet in @Model)
   {
     <div class="pet-container">
-      
+
       <div class="pet-name">
-        <h2>Name: <a href='/pets/@pet.Id/show'>@pet.Name</h2>
+        <h2><a href='/pets/@pet.Id/show'>@pet.Name</a></h2>
+        <form action="/pets/@pet.Id/Delete" method="post">
+          <input name="Id" type="hidden" value="@pet.Id">
+          <button class="btn btn-danger" type="submit">Delete</button>
+        </form>
       </div>
 
       @if (@pet.IsTamagotchiDead())
       {
         <p>This pet has died.</p>
+        <img class="center" src="https://www.pngkey.com/png/detail/413-4138064_descargar-mametchi-png.png" width="300px">
       } else {
 
-        <div class="pet-property">
+        <div class="pet-property form-group">
           <form action="/pets/@pet.Id/Food" method="post">
-            <div class="pet-property-display">
+            <div class="pet-property-display form-group">
               <input name="Id" type="hidden" value="@pet.Id">
-              <p><span>@pet.Food</span></p>
-            </div>
-            <div class="pet-button">
-              <button class="btn btn-primary" type="submit">Feed</button>
-            </div>    
-          </form>
+              <p>Food Level: <span>@pet.Food</span>
+              <button class="btn btn-primary" type="submit">Feed</button></p>
+            </div> 
+          </form>    
         </div>
 
         <div class="pet-property">
           <form action="/pets/@pet.Id/Sleep" method="post">
-            <div class="pet-property-display">
+            <div class="pet-property-display form-group">
               <input name="Id" type="hidden" value="@pet.Id">
-              <p><span>@pet.Sleep</span>
-            </div>
-            <div class="pet-button">
-              <button class="btn btn-primary" type="submit">Sleep</button>
+              <p>Rest Level: <span>@pet.Sleep</span>
+              <button class="btn btn-primary" type="submit">Sleep</button></p>
             </div>
           </form>
         </div>
 
         <div class="pet-property">
           <form action="/pets/@pet.Id/Attention" method="post">
-            <div class="pet-property-display">
+            <div class="pet-property-display  form-group">
               <input name="Id" type="hidden" value="@pet.Id">
-              <p><span>@pet.Attention</span></p>
-            </div>
-            <div>
-              <button class="btn btn-primary" type="submit">Play</button>
+              <p>Care Level: <span>@pet.Attention</span>
+              <button class="btn btn-primary" type="submit">Play</button></p>
             </div>
           </form>
         </div>
+        <div class="pet-image">
+        </div>
 
-        <form action="/pets/@pet.Id/Delete" method="post">
-          <input name="Id" type="hidden" value="@pet.Id">
-          <button class="btn btn-primary" type="submit">Delete</button>
-        </form>
       }
     </div>
   }
 
-@* buttons/links with actions *@
-<div class="pet-container">
-<form action="/pets/updateall" method="post">
-  <button class="btn btn-large" type="submit" name="button">Increase Time</button>
-</form>
-
-<a class="btn btn-large" href="/pets/new">Make a new Tamagotchi!</a>
-
-<form class="btn btn-large" action="/pets/delete/all" method="post">
-  <button type="submit" name="button">Remove all Pets</button>
-</form>
 </div>
