--- a/Tamagotchi/Views/Pets/Index.cshtml
+++ b/Tamagotchi/Views/Pets/Index.cshtml
@@ -77,7 +77,7 @@
             </div>
           </form>
         </div>
-        <div class="pet-image"><a></a>
+        <div class="pet-image">
         </div>
 
       }
